# Shop-item-mangement

./: CMakeLists.txt  book.cpp  book.h  broadcast.cpp  broadcast.h  customers.cpp  customers.h  item.cpp  item.h  itemdialog.cpp  itemdialog.h  itemfactory.cpp  itemfactory.h  itemlist.cpp  itemlist.h  itemlistmemento.cpp  itemlistmemento.h  lineitem.cpp  lineitem.h  magazine.cpp  magazine.h  mainwindow.cpp  mainwindow.h  transaction.cpp  transaction.h  transactiondialog.cpp  transactiondialog.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h  treemodeltoxml.cpp  treemodeltoxml.h
